--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en" ng-app='tunely'>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,14 +19,30 @@
     <!-- APPLICATION SCRIPTS -->
     <script src="/scripts/app.js"></script>
 
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="jumbotron">
-      <div class="container">
-        <h1>Welcome to tunely</h1>
-        <p>Your music binder!</p>
-      </div>
+        <div class="container">
+            <h1>Welcome to tunely</h1>
+            <p>Your music binder!</p>
+        </div>
     </div>
-  </body>
+    <div class="container" ng-controller="AlbumsIndexController as albumsIndexCtrl" >
+        <input type="text" ng-model="search" class='form-control' name="search" placeholder="Search"/>
+        <hr>
+        <!--html inside of here can use the information from the AlbumsIndexController-->
+        <div ng-repeat="album in albumsIndexCtrl.albums | orderBy: 'name ' | filter: search">
+
+          {{album.name}} by {{album.artistName}}
+          <hr>
+        </div>
+        <p><b>Add an Album:</b> {{albumsIndexCtrl.newAlbum.name}} by {{albumsIndexCtrl.newAlbum.artistName}}</p>
+<br>
+        <input type="text" class="form-control" placeholder="New album name" ng-model="albumsIndexCtrl.newAlbum.name">
+        <br>
+        <input type="text" class="form-control" placeholder="New album artist" ng-model="albumsIndexCtrl.newAlbum.artistName">
+    </div>
+</body>
 
 </html>
