--- a/views/index.html
+++ b/views/index.html
@@ -27,64 +27,25 @@
       </div>
     </div>
 
+    <!-- Here we declare the controller that will be in charge of the
+        logic for this portion of the HTML. The 'as' part of the statement
+        means that the controller's alias within the HTML will be
+        albumsIndexCtrl-->
     <div class="container" ng-controller="AlbumsIndexController as albumsIndexCtrl">
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-
-          <form class="form-horizontal" ng-submit="albumsIndexCtrl.createAlbum()">
-            <fieldset>
-
-              <!-- Form Name -->
-              <legend>Add New Album</legend>
-
-              <!-- Text input-->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Album Name</label>
-                <div class="col-md-4">
-                <input id="name" ng-model="albumsIndexCtrl.newAlbum.name" type="text" class="form-control input-md" required="">
-                </div>
-              </div>
-
-              <!-- Text input-->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Artist Name</label>
-                <div class="col-md-4">
-                <input ng-model="albumsIndexCtrl.newAlbum.artistName" type="text" class="form-control input-md">
-                </div>
-              </div>
-
-              <!-- Text input-->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Release Date</label>
-                <div class="col-md-4">
-                <input ng-model="albumsIndexCtrl.newAlbum.releaseDate" type="text" class="form-control input-md">
-                </div>
-              </div>
-
-              <!-- Textarea -->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Genres (separated by commas)</label>
-                <div class="col-md-4">
-                  <textarea class="form-control" ng-model="albumsIndexCtrl.newAlbum.genres"></textarea>
-                </div>
-              </div>
-
-
-              <!-- Button -->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Save Album</label>
-                <div class="col-md-4">
-                  <button class="btn btn-primary">Submit</button>
-                </div>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-      </div>
-
-      <p>{{albumsIndexCtrl.newAlbum}}</p>
-
       <input type="text" class="form-control" ng-model="searchText" placeholder="Search Albums">
+      <hr>
+
+      <form ng-submit="albumsIndexCtrl.createAlbum(albumsIndexCtrl.newAlbum)">
+      <input type="text" class="form-control" placeholder="New Album Name" ng-model="albumsIndexCtrl.newAlbum.name">
+      <br>
+      <input type="text" class="form-control" placeholder="New Album Artist" ng-model="albumsIndexCtrl.newAlbum.artistName">
+      <br>
+      <textarea name="name" rows="8" cols="40"></textarea>
+      <p><b>Add a New Album:</b> {{albumsIndexCtrl.newAlbum.name}} by {{albumsIndexCtrl.newAlbum.artistName}}</p>
+
+      <input type="Submit"  value = 'Add Album'/>
+    </form>
+
       <div ng-repeat="album in albumsIndexCtrl.albums | orderBy: 'name' | filter: searchText" class="row">
 
         <div class="col-md-10 col-md-offset-1">
@@ -109,6 +70,7 @@
                       <span>{{album.artistName}}</span>
                     </li>
                   </ul>
+                  <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
                 </div>
               </div>
             </div>
