--- a/views/index.html
+++ b/views/index.html
@@ -71,6 +71,8 @@
                     </li>
                   </ul>
                   <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
+                  <button class='btn btn-info' ng-hide="editing" ng-click="editing = true">Edit Album</button>
+                  <input ng-show="editing" ng-model="album.name" type="text" class="form-control input-md">
                 </div>
               </div>
             </div>
