--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
       <br>
       <input type="text" class="form-control" placeholder="New Album Artist" ng-model="albumsIndexCtrl.newAlbum.artistName">
       <br>
-      <textarea name="name" rows="8" cols="40"></textarea>
+      <!-- <textarea name="name" rows="8" cols="40"></textarea> -->
       <p><b>Add a New Album:</b> {{albumsIndexCtrl.newAlbum.name}} by {{albumsIndexCtrl.newAlbum.artistName}}</p>
 
       <input type="Submit"  value = 'Add Album'/>
@@ -70,9 +70,15 @@
                       <span>{{album.artistName}}</span>
                     </li>
                   </ul>
-                  <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
                   <button class='btn btn-info' ng-hide="editing" ng-click="editing = true">Edit Album</button>
-                  <input ng-show="editing" ng-model="album.name" type="text" class="form-control input-md">
+                  <span ng-show='editing'>Album Name:
+                    <input ng-show="editing" ng-model="album.name" name='name' type="text" class="form-control input-md">
+                    </span>
+                    <span ng-show='editing'>Artist Name:
+                    <input ng-show="editing" ng-model="album.artistName" name='artistName' type="text" class="form-control input-md">
+                    </span>
+                  <button class='btn btn-success' ng-show="editing" ng-click="albumsIndexCtrl.editAlbum(album); editing = false">Save Changes</button>
+                  <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
                 </div>
               </div>
             </div>
